2013-03-22  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Added missing
	types.

2013-03-22  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Fixed bad
	sql syntax.

2013-03-21 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/groups.php, mobile/operation/tactical.php,
	mobile/operation/alerts.php, mobile/operation/events.php,
	mobile/include/style/main.css, mobile/include/ui.class.php,
	mobile/include/user.class.php, include/functions_events.php: updated
	the code of events in mobile.

2013-03-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/index.php, mobile/operation/events.php,
	mobile/operation/alerts.php, include/functions_agents.php,
	include/functions_alerts.php,
	operation/agentes/alerts_status.functions.php: added first version
	of alert view.

2013-03-20  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Added support for braa_retries.

2013-03-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/events.php, mobile/include/ui.class.php,
	mobile/index.php: added first version of events section.
	
	* include/functions_incidents.php, include/functions_users.php,
	include/functions.php, include/functions_groups.php,
	include/functions_events.php, include/functions_html.php,
	operation/events/events.build_table.php,
	operation/events/events.build_query.php,
	operation/events/events_list.php: some changes for interact with
	mobile version.

2013-03-20  Mario Pulido <mario.pulido@artica.es>
	
	* godmode/setup/setup_general.php: Add help tip in Timezone Setup

2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Disable auto-refresh when reset
	  operations are executed.

2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/modificar_server.php: Added an option to reset
	  counts.

2013-03-19  Ramon Novoa  <rnovoa@artica.es>
