@@ -1,3 +1,9 @@
+2013-03-22  Ramon Novoa  <rnovoa@artica.es>
+
+	* operation/gis_maps/ajax.php,
+	  godmode/agentes/agent_conf_gis.php: Fixed coordinate precision and
+	  display order. Fixes bug #3608628.
+
 2013-03-22  Junichi Satoh  <junichi@rworks.jp>
 
 	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql: Added missing
